syntax = "proto3";

option csharp_namespace = "PIS_GrpcService.PIS_GrpcService";

service GrpcContractService {
  rpc GetAll(Empty) returns (ContractsArray);
  rpc Add(GrpcContract) returns (Empty);
  rpc Get(IdRequest) returns (GrpcContract);
  rpc Edit(GrpcContract) returns (Empty);
  rpc Delete(IdRequest) returns (Empty);
}

message Empty{}

message IdRequest {
   int32 Id = 1;
}

message Contract {
	int32 Id = 1;
	google.protobuf.Timestamp ConclusionDate = 2;
	google.protobuf.Timestamp EffectiveDate = 3;
	int32 Amount = 4;
	string Performer = 5;
	string Customer = 6;
	ContractArray Localities = 7;
}

message ContractArray {
	repeated GrpcContract list = 1;
}